tray: Update network list to show nothing after toggle wifi on and off.

The wifi disabled message would show on toggle wifi off, but remain
when toggling wifi back on.

Test: manual
Bug: 823236
Change-Id: Ib232a917e45fea83a72792d0fbf30374661477d2
Reviewed-on: https://chromium-review.googlesource.com/1102896
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567801}
Former-commit-id: 7715f2bfe3ca4493585752053ee0ab3b78911066